# shoppe-fastapi

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 2024_10_20_1436-c0c5abc69182_database_creation.py  2024_10_27_1635-562661e4b28e_create_user_table.py  2024_10_27_1647-4473578c9ac3_create_post_table.py  2024_10_27_1727-d6effc37f216_create_profile_table.py  2024_11_23_1954-fe4e94978c4d_new_revision.py  2024_11_24_0044-4eb6b70540c4_user_edit.py  2024_11_24_0054-e21943342b2f_user_edit_username_field.py  2024_11_24_0103-782ca79fc8a4_password_edit_type.py  2024_11_24_0116-74a7ac4ec8c9_password_edit_type_2.py  2024_11_30_1210-b3f49fbb6cfa_delete_profile.py  2024_12_07_1551-da45564f8685_database_creation.py  2024_12_07_1553-d3e93ea9a342_database_creation.py  2024_12_11_2133-658336f6af01_creation_order.py  2024_12_11_2204-af9565b0b3d8_creation_order_product.py  2024_12_11_2207-b7c4811b2764_creation_order_product2.py  2024_12_13_2053-ffdd5131ffe2_database_add_count_in_order_product.py  2024_12_13_2139-12b2a70f5fd5_add_field_price.py  2024_12_14_1912-3541306ba801_database_creation.py  2024_12_14_1915-dd6c54c02d9f_add_links_user_in_order.py  2024_12_14_1918-c50704230652_add_orders_in_user.py  2024_12_14_1946-085b4a99c7fe_database_creation.py
api_v1/: __init__.py
api_v1/auth/: dependencies.py  helpers.py  schemas.py  utils.py  views.py
api_v1/order/: crud.py  dependecies.py  schemas.py  views.py
core/: config.py
product/: crud.py  schemas.py  views.py
(+25 files in other folders)
